ifds/src/tests/icfg/snapshots/ifds__tests__icfg__fast__test_ir_binop_offset_dot.snap
---
source: src/tests/icfg/fast.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (0) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (1) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (2) at (2, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (3) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (4) at (1, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (5) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (6) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (7) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (8) at (0, 4) { };
\node[font=\tiny] at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] at (-1.5, 1.5) {Const(1, 1.0)};
\node[font=\tiny] at (-1.5, 2.5) {BinOp(2, 0, 1)};
\node[font=\tiny] at (-1.5, 3.5) {BinOp(2, 1, 0)};
		\path[->, blue] (5) [bend right] edge  node { } (0);
		\path[->, blue] (5) [bend right] edge  node { } (1);
		\path[->, blue] (5) [bend right] edge  node { } (2);
		\path[->, blue] (5) [bend right] edge  node { } (3);
		\path[->, blue] (5) [bend right] edge  node { } (4);
		\path[->, blue] (5) [loop right] edge  node { } (5);
		\path[->, blue] (5) [bend right] edge  node { } (6);
		\path[->, blue] (5) [bend right] edge  node { } (7);
		\path[->, blue] (5) [bend right] edge  node { } (8);


                \end{tikzpicture}
            \end{document}
