ifds/src/tests/icfg/snapshots/ifds__tests__icfg__fast__test_ir_double_const_with_params_dot.snap
---
source: src/tests/icfg/fast.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (0) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (1) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (2) at (0, 3) { };
\node[font=\tiny] at (-1.5, 0.5) {Const(1, 1.0)};
\node[font=\tiny] at (-1.5, 1.5) {Assign(2, 0)};
\node[font=\tiny] at (-1.5, 2.5) {Assign(2, 1)};
		\path[->, blue] (1) [bend right] edge  node { } (0);
		\path[->, blue] (1) [loop right] edge  node { } (1);
		\path[->, blue] (1) [bend right] edge  node { } (2);


                \end{tikzpicture}
            \end{document}
