ifds/src/tests/icfg/snapshots/ifds__tests__icfg__fast__test_ir_global_call_dot.snap
---
source: src/tests/icfg/fast.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (15) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (16) at (2, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (17) at (2, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (18) at (2, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (19) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (20) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (21) at (1, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (22) at (1, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (23) at (1, 6) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (24) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (25) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (26) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (27) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (28) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (29) at (0, 5) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (30) at (0, 6) { };
\node[font=\tiny] at (-1.5, 0.5) {Block(1)};
\node[font=\tiny] at (-1.5, 1.5) {Const(1, 1.0)};
\node[font=\tiny] at (-1.5, 2.5) {Call(0, [1], [])};
\node[font=\tiny] at (-1.5, 3.5) {Assign(2, 0)};
\node[font=\tiny] at (-1.5, 4.5) {Assign(-2, 2)};
\node[font=\tiny] at (-1.5, 5.5) {Return([])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (0) at (10, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (1) at (10, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (2) at (9, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (3) at (9, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (4) at (9, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (5) at (9, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (6) at (9, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (7) at (8, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (8) at (8, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (9) at (8, 4) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (10) at (7, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (11) at (7, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (12) at (7, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (13) at (7, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (14) at (7, 4) { };
\node[font=\tiny] at (5.5, 0.5) {Block(0)};
\node[font=\tiny] at (5.5, 0.5) {Block(0)};
\node[font=\tiny] at (5.5, 1.5) {Assign(1, 0)};
\node[font=\tiny] at (5.5, 1.5) {Assign(1, 0)};
\node[font=\tiny] at (5.5, 2.5) {Assign(-1, 1)};
\node[font=\tiny] at (5.5, 2.5) {Assign(-1, 1)};
\node[font=\tiny] at (5.5, 3.5) {Return([])};
\node[font=\tiny] at (5.5, 3.5) {Return([])};
		\path[->, blue] (2) [bend right] edge  node { } (0);
		\path[->, blue] (2) [bend right] edge  node { } (1);
		\path[->, blue] (2) [loop right] edge  node { } (2);
		\path[->, blue] (2) [bend right] edge  node { } (3);
		\path[->, blue] (2) [bend right] edge  node { } (4);
		\path[->, blue] (2) [bend right] edge  node { } (5);
		\path[->, blue] (2) [bend right] edge  node { } (6);
		\path[->, blue] (2) [bend right] edge  node { } (7);
		\path[->, blue] (2) [bend right] edge  node { } (8);
		\path[->, blue] (2) [bend right] edge  node { } (9);
		\path[->, blue] (10) [loop right] edge  node { } (10);
		\path[->, blue] (10) [bend right] edge  node { } (11);
		\path[->, blue] (10) [bend right] edge  node { } (12);
		\path[->, blue] (10) [bend right] edge  node { } (13);
		\path[->, blue] (10) [bend right] edge  node { } (14);
		\path[->, blue] (24) [bend right] edge  node { } (20);
		\path[->, blue] (24) [bend right] edge  node { } (21);
		\path[->, blue] (24) [bend right] edge  node { } (22);
		\path[->, blue] (24) [bend right] edge  node { } (23);
		\path[->, blue] (24) [loop right] edge  node { } (24);
		\path[->, blue] (24) [bend right] edge  node { } (25);
		\path[->, blue] (24) [bend right] edge  node { } (26);
		\path[->, blue] (24) [bend right] edge  node { } (27);
		\path[->, blue] (24) [bend right] edge  node { } (28);
		\path[->, blue] (24) [bend right] edge  node { } (29);
		\path[->, blue] (24) [bend right] edge  node { } (30);
		\path[->, blue] (25) [bend right] edge  node { } (15);
		\path[->, blue] (25) [bend right] edge  node { } (16);
		\path[->, blue] (25) [bend right] edge  node { } (17);
		\path[->, blue] (25) [bend right] edge  node { } (18);
		\path[->, blue] (25) [bend right] edge  node { } (19);
		\path[->, blue] (25) [loop right] edge  node { } (25);
		\path[->, blue] (25) [bend right] edge  node { } (27);
		\path[->, blue] (25) [bend right] edge  node { } (28);
		\path[->, blue] (25) [bend right] edge  node { } (29);
		\path[->, blue] (25) [bend right] edge  node { } (30);


                \end{tikzpicture}
            \end{document}
