ifds/src/tests/icfg/snapshots/ifds__tests__icfg__fast__test_ir_global_get_and_set_dot.snap
---
source: src/tests/icfg/fast.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-2$}] (0) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (1) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%1$}] (2) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (3) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (4) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (5) at (0, 2) { };
\node[font=\tiny] at (-1.5, 0.5) {Assign(1, -1)};
\node[font=\tiny] at (-1.5, 1.5) {Assign(-2, 1)};
		\path[->, blue] (3) [bend right] edge  node { } (0);
		\path[->, blue] (3) [bend right] edge  node { } (1);
		\path[->, blue] (3) [bend right] edge  node { } (2);
		\path[->, blue] (3) [loop right] edge  node { } (3);
		\path[->, blue] (3) [bend right] edge  node { } (4);
		\path[->, blue] (3) [bend right] edge  node { } (5);


                \end{tikzpicture}
            \end{document}
