ifds/src/tests/icfg/snapshots/ifds__tests__icfg__fast__test_ir_globals_check_order_dot.snap
---
source: src/tests/icfg/fast.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (0) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (2) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (4) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (6) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (7) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (8) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (9) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (11) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (12) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (13) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%0$}] (18) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%2$}] (19) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (20) at (3, 3) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Assign(-1, 0)};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Call(mytest, [], [2])};
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (1) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (3) at (7, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (5) at (7, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (10) at (6, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (14) at (7, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (15) at (7, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (16) at (7, 2) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $\%-1$}] (17) at (7, 3) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (21) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (22) at (6, 1) { };
\node[circle,fill,inner sep=1pt,label=left:{\scriptsize $taut$}] (23) at (6, 2) { };
\node[font=\tiny] (note_3) at (4.5, 0.5) {Const(0, 2.0)};
\node[font=\tiny] (note_4) at (4.5, 1.5) {Const(1, 3.0)};
\node[font=\tiny] (note_5) at (4.5, 2.5) {Return([-1])};
\node[font=\tiny] (note_6) at (4.5, 0.5) {Const(0, 2.0)};
\node[font=\tiny] (note_7) at (4.5, 1.5) {Const(1, 3.0)};
\node[font=\tiny] (note_8) at (4.5, 2.5) {Return([-1])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (7);
		\path[->, blue] (0) [bend right] edge  node { } (8);
		\path[->, blue] (0) [bend right] edge  node { } (9);
		\path[->, blue] (0) [bend right] edge  node { } (18);
		\path[->, blue] (1) [loop right] edge  node { } (1);
		\path[->, blue] (1) [bend right] edge  node { } (22);
		\path[->, blue] (1) [bend right] edge  node { } (23);
		\path[->, blue] (1) [bend right] edge  node { } (10);
		\path[->, blue] (0) [bend right] edge  node { } (11);
		\path[->, blue] (0) [bend right] edge  node { } (12);
		\path[->, blue] (3) [loop right] edge  node { } (3);
		\path[->, blue] (0) [bend right] edge  node { } (13);
		\path[->, blue] (3) [bend right] edge  node { } (15);
		\path[->, blue] (3) [bend right] edge  node { } (16);
		\path[->, blue] (3) [bend right] edge  node { } (17);
		\path[->, blue] (0) [bend right] edge  node { } (19);
		\path[->, blue] (0) [bend right] edge  node { } (20);


                \end{tikzpicture}
            \end{document}
